# beecast

./: .gitignore  .scsh.yml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  PR-DESCRIPTION.md  PUBLISHING.md  README.md  SCHEMA.md
.githooks/: pre-push
.github/: check-release.py  test_check_release.py
.github/workflows/: cargo-crates-publish.yml  ci.yml
.skills/seecast/: SKILL.md
.skills/seecast/scripts/: seecast.py
browser-tests/: global-setup.js  package-lock.json  package.json  playwright.config.js
browser-tests/tests/: gates.spec.js  helpers.js
cli/: Cargo.toml  README.md
cli/src/: cast.rs  main.rs  page.rs
cli/tests/: cli.rs  parity.rs
cli/tests/fixtures/: long-sparse.cast  sample.meta.json
dto/: Cargo.toml  README.md  SCHEMA.md
dto/schema/: beecast-meta.schema.json
dto/src/: lib.rs
page/: Cargo.toml  README.md
page/src/: cast.rs  json.rs  lib.rs  page.html  page.rs
page/src/player/: README.md  player.css
player/: Cargo.toml  README.md
player/bench/: README.md  bench.js
player/src/: controller.js  lib.rs  player.css  player.js
schema/: beecast-meta.schema.json
seecast/: README.md  seecast
seecast/tests/: test_seecast.py  test_style.py
src/: main.rs  meta.rs  page.html  page.rs
tests/: cli.rs
tests/fixtures/: sample.cast
