[package]
name = "beecast"
version = "0.1.0"
edition = "2021"
description = "Browser Cast — turn an asciinema .cast recording into a single self-contained .html player page."
license = "MIT"
repository = "https://github.com/dkorolev/beecast"
readme = "README.md"
keywords = ["asciinema", "terminal", "recording", "cast", "player"]
categories = ["command-line-utilities"]
# The published crate is the Rust CLI only: the sources under src/ (vendored player and page template included), the schema it embeds via include_str!, and the docs.
# The SeeCast Python annotator and the test fixtures stay repo-only.
include = ["/src/", "/schema/", "/README.md", "/SCHEMA.md", "/LICENSE"]

[[bin]]
name = "beecast"
path = "src/main.rs"

# Only small, established, single-purpose crates are used, per ENG-PRINCIPLES §7.
# `serde` and `serde_json` are the one canonical way to get strict, strongly-typed JSON with `deny_unknown_fields` (§1).
# `thiserror` types the errors callers branch on, and `anyhow` carries context where they don't (§5).
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
