[workspace]
resolver = "2"
members = ["dto", "cli"]

# One source of truth for the shared package metadata, and for the version every crate inherits (§7).
[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ['Dmitry "Dima" Korolev <dmitry.korolev@gmail.com>']
license = "MIT"
repository = "https://github.com/dkorolev/beecast"

# Shared dependencies, including the internal DTO crate.
# The internal dep carries both a `path` (used inside the workspace) and a `version` (used once published).
# `cargo publish` strips the path, so the published `beecast` depends on `beecast-dto` from the registry.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
schemars = "1"
anyhow = "1"
beecast-dto = { path = "dto", version = "0.1.0" }
