[workspace]
resolver = "2"
members = ["dto", "player", "page", "cli"]

# One source of truth for the shared package metadata, and for the version every crate inherits (§7).
[workspace.package]
version = "0.10.5"
edition = "2021"
authors = ['Dmitry "Dima" Korolev <dmitry.korolev@gmail.com>']
license = "MIT"
repository = "https://github.com/dkorolev/beecast"

# Shared dependencies, including the internal crates.
# Each internal dep carries both a `path` (used inside the workspace) and a `version` (used once published).
# `cargo publish` strips the paths, so the published `beecast` depends on both from the registry.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
schemars = "1"
anyhow = "1"
tempfile = "3"
beecast-dto = { path = "dto", version = "0.10.5" }
beecast-player = { path = "player", version = "0.10.5" }
beecast-page = { path = "page", version = "0.10.5" }
