[package]
name = "beecast"
description = "Browser Cast — turn an asciinema .cast recording into a single self-contained .html player page."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
# BeeCast's own code is MIT, while the vendored and inlined asciinema-player is Apache-2.0.
# The crate ships both, and every generated page embeds both, so the SPDX expression names both.
license = "MIT AND Apache-2.0"
keywords = ["asciinema", "terminal", "cast", "player", "html"]
categories = ["command-line-utilities"]
# The published crate is the CLI: its sources (with the vendored player and page template), its README, and both license texts.
# MIT ships as /LICENSE and the vendored player's Apache-2.0 under /src/vendor/, matching the SPDX expression.
# The test suite and fixtures stay repo-only.
include = ["/src/", "/README.md", "/LICENSE"]

[[bin]]
name = "beecast"
path = "src/main.rs"

# The metadata types come from the versioned `beecast-dto` crate and cast inspection from the
# zero-dependency `beecast-page` crate; the CLI adds rendering and I/O.
# `serde_json` builds the machine-mode output documents, and `anyhow` carries error context (§5).
[dependencies]
beecast-dto.workspace = true
beecast-page.workspace = true
serde_json.workspace = true
anyhow.workspace = true
