[package]
name = "beecast"
description = "Browser Cast — turn an asciinema .cast recording into a single self-contained .html player page."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
# BeeCast's own code is MIT, while the vendored asciinema-player (Apache-2.0) now ships in the
# `beecast-page` dependency — yet every `beecast` binary and every generated page still embeds it,
# so this crate's SPDX expression keeps naming both.
license = "MIT AND Apache-2.0"
keywords = ["asciinema", "terminal", "cast", "player", "html"]
categories = ["command-line-utilities"]
# The published crate is the CLI: its sources, its README, and the MIT license text as /LICENSE
# (the vendored player and its Apache-2.0 text ship inside `beecast-page`).
# The test suite and its fixtures ship too — leaving them out made cargo warn at packaging time
# about the auto-discovered test targets, and the gate requires packaging to be warning-free.
include = ["/src/", "/tests/", "/README.md", "/LICENSE"]

[[bin]]
name = "beecast"
path = "src/main.rs"

# The metadata types come from the versioned `beecast-dto` crate and the whole page pipeline
# (cast inspection, the template, the vendored player) from the zero-dependency `beecast-page`
# crate; the CLI adds argument parsing and I/O on top. `serde_json` builds the machine-mode
# output documents, and `anyhow` carries error context (§5).
[dependencies]
beecast-dto.workspace = true
beecast-page.workspace = true
serde_json.workspace = true
anyhow.workspace = true
