[package]
name = "beecast-page"
description = "The beecast page pipeline as a library — turn an asciinema .cast recording plus plain-strings metadata into a single self-contained offline .html player page. Nothing third-party: its only dependency is the zero-dependency beecast-player."
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
# All first-party code, including the clean-room player the pages embed — one
# license for the crate and for every generated page.
license.workspace = true
keywords = ["asciinema", "terminal", "cast", "player", "html"]
categories = ["visualization", "web-programming"]
# The published crate is the pipeline: its sources (with the first-party player and page
# template), its README, and the MIT license.
include = ["/src/", "/README.md", "/LICENSE"]

# One dependency — the first-party, itself zero-dependency `beecast-player` crate the pages embed. Consumers with
# tiny dependency trees (`scsh` hand-rolls its JSON on purpose) still inherit nothing third-party: the pipeline's
# few JSON needs are met by the std-only `json` module.
[dependencies]
beecast-player.workspace = true
